# cortesi-canopy

./: Cargo.toml
api-surface/: canopy-derive.rs  canopy-examples.rs  canopy-geom.rs  canopy-mcp.rs  canopy-widgets.rs  canopy.rs
canopy/: Cargo.toml
canopy-derive/: Cargo.toml
canopy-derive/src/: lib.rs
canopy/src/: commands.rs  error.rs  global.rs  script.rs
crates/canopy/: Cargo.toml
crates/canopy-mcp/: Cargo.toml
crates/canopy-mcp/src/: script.rs  server.rs  smoke.rs
crates/canopy/benches/: core.rs
crates/canopy/src/core/: error.rs
crates/canopy/src/core/event/: mod.rs
crates/canopy/src/core/script/: defs.rs  mod.rs
crates/canopy/tests/: test_script_commands.rs
crates/canopyctl/src/: main.rs
docs/: fixtures.md  scripting.md
plans/: oxau.md  roadmap.md
