[package]
name = "canopy"
authors = ["Aldo Cortesi <aldo@corte.si>"]
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
canopy-geom = { path = "../canopy-geom" }
crossterm = "0.29.0"
thiserror = "2.0.18"
scopeguard = "1.2.0"
convert_case = "0.11"
termcolor = "1.4.1"
comfy-table = "7.2.2"
color-backtrace = "0.7.2"
tracing = "0.1.44"
canopy-derive = { path = "../canopy-derive" }
slotmap = "1.1.1"
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
schemars = "1.2.1"
oxau = { version = "0.1.0", path = "../../../../private/oxau-canopy/crates/oxau", default-features = false }

[dev-dependencies]
rand = "0.10.1"
proptest = "1.11.0"
criterion = "0.8.2"

[features]
testing = []

[lints]
workspace = true
